# xuexi

./: .gitignore  Cargo.toml  SQLite.sql  config-custom.ini  config.toml  ui.xml  xuexi.exe - 快捷方式.lnk
resource/: blank.json  challenge.json  daily.json  data-dev.sqlite  data.sqlite  db_wrong.json  questions.json  ui.xml  uimumu.xml
src/: android.rs  base.rs  challenge.rs  comments.json  config.rs  daily.rs  db.rs  local.rs  main.rs  reader.rs  ui.rs  viewer.rs
