[package]
name = "xuexi"
version = "0.1.0"
authors = ["chenlixin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
amxml = "*"
config = "*"
diesel = { version = "1",features = ["sqlite"]}
lazy_static ="1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rand = "*"

